# Window-manager-for-Windows

./: .gitignore  LICENSE  NOTICE  README.md  a.cpp  blocking.cpp  buffer.cpp  click.cpp  client.py  display_server.py  g.cpp  getwin.cpp  hookdll.cpp  key_code.txt  keyboard_manager.py  keyboard_server.py  layout.cpp  log.txt  logger.py  manager.py  p.py  panel.py  requirements.txt  run.py  shortcut_panel.py  socket_client.py  socket_server.py  space_server.py  subprocess_server.py  update_grap.py  update_icons.py  update_status.py  variable.py  variable_def.py  vol.cpp  win.cpp  windows_controle.py  windows_is_full_server.py  windows_server.py  write.cpp
components/services/blocking/: AppConfig.h  CMakeLists.txt  HotkeyManager.cpp  HotkeyManager.h  KeyDictionary.cpp  KeyDictionary.h  KeyboardHook.cpp  KeyboardHook.h  LanguageMonitor.cpp  LanguageMonitor.h  README.md  blocking.cpp  main.cpp
components/services/display/: display.cpp
plugins/alt-tab/: alt_tab.py  variable.py
plugins/alt_tab/: alt_tab.py  variable.py
plugins/shift/: shift.py
plugins/shortcut_panel/: shortcut_panel.py  variable.py
plugins/update_grap/: update_grap.py  variable.py
plugins/update_icons/: update_icons.py  variable.py
plugins/update_status/: update_status.py  variable.py
tools/blocking/: blocking.cpp  g.cpp
tools/buffer/: buffer.cpp
tools/display/: display.cpp
tools/getwin/: getwin.cpp
tools/gpu/: nvml.rar
tools/layout/: layout.cpp
tools/net/: net.cpp
tools/press/: press.cpp
tools/trey/: trey.cpp
tools/vol/: vol.cpp
tools/включить курсор/: a.cpp
(+12 files in other folders)
